[package]
name = "openfile"
version = "1.0.1"
authors = ["TheSlam <32799244+salmmanfred@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/salmmanfred/openfile"
license = "MIT"
description = "A simple way to interact with files."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

