[package]
name = "openfile"
version = "2.2.0"
authors = ["TheSlam <32799244+salmmanfred@users.noreply.github.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/salmmanfred/openfile"
license = "MIT"
description = "A simple way to interact with files."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

